Correct additional errors in spacing and wordsmith.

--- a/app/assets/stylesheets/desktop/_case_study.css.sass
+++ b/app/assets/stylesheets/desktop/_case_study.css.sass
@@ -34,6 +34,22 @@
   +at-breakpoint($break12)
     background: image-url("case-studies-sprite.png") 100px -880px no-repeat
 
+#atcstar, #aqqaluktrust
+  position: relative
+  background-color: $white
+
+#aqqaluktrust
+  margin: 0 0 $margin-4
+
+  +at-breakpoint($break6)
+    margin: 0 0 $margin-6
+
+  +at-breakpoint($break9)
+    margin: 0 0 $margin-9
+
+  +at-breakpoint($break12)
+    margin: 0 0 $margin-12
+
 .atcstar, .aqqaluktrust
   text-align: center
 
